--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="main.js"></script>
 </head>
 <body>
-    <h1 style="color: pink;">Subida Git</h1>
+    <h1 style="color: pink; background-color: black; display: flex; justify-content: center; align-items: center;">Subida Git</h1>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit modi illum maiores soluta? Fuga nam quaerat impedit optio, soluta ut hic accusamus magnam molestias? Error quos dolorum porro quam voluptatibus?</p>
 </body>
 </html>
